--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>Kanban board</title>
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <div id="board" class="board">
-            <h1>Kanban board</h1>
+            <h1 class="text-center">Kanban board</h1>
             <button class="create-column">Add a column</button>
             <div class="column-container">
                 
